--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,3 @@
-
 apply plugin: 'java-gradle-plugin'
 apply plugin: 'maven-publish'
 
@@ -32,6 +31,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.benf:cfr:0.140'
     implementation 'com.github.fesh0r:fernflower:master'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'commons-io:commons-io:2.4'
